Fix #7: "Please Login to answer" is not readable if you're not logged in

--- a/qa-styles.css
+++ b/qa-styles.css
@@ -1172,6 +1172,15 @@ blockquote p {
     font-size: 11px;
 }
 
+.qa-a-form a {
+    color: #4e9a06;
+}
+
+.qa-a-form a:hover {
+    color: #73d216;
+}
+
+
 /* Question list */
 .qa-q-list {
 }
